--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:android": "./scripts/build-android.sh",
+    "build:android:install": "./scripts/build-android.sh --install"
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.8",
+    "@capacitor/core": "^5.7.8",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/mapbox-gl": "^3.4.1",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +27,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.7.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
